@@ -61,6 +61,8 @@ Other
 
 * GITHUB#11834: Upgrade forbiddenapis to version 3.4.  (Uwe Schindler)
 
+* LUCENE-10635: Ensure test coverage for WANDScorer by using a test query. (Zach Chen, Adrien Grand)
+
 ======================== Lucene 9.4.0 =======================
 
 API Changes
